--- a/src/app/modules/admin/UserPages/CDPO/addCdpo.scss
+++ b/src/app/modules/admin/UserPages/CDPO/addCdpo.scss
@@ -1,13 +1,10 @@
-.AddEvent-Container {
+.AddCDPO-Container {
     height: 100%;
     border-radius: 0.6rem;
     width: 100%;
-    // display: flex;
-    // align-items: flex-start;
-    // flex-direction: column !important;
     padding: 1.5rem 1.2rem;
     background-color: rgb(241, 241, 241);
-    .AddEventBox{
+    .AddCDPOBox{
         padding: 2.7rem 2.5rem 5rem;
         border-radius: 5px;
         background-color: #fff;
