--- a/src/app/components/sidebar/sidebar.scss
+++ b/src/app/components/sidebar/sidebar.scss
@@ -6,7 +6,7 @@
     height: 90vh;
     overflow: auto;
     .sideNav {
-        margin: 1.8rem 1.1rem;
+        margin: 1.8rem 1.1rem 0rem;
         padding: 0.7rem;
         width: 20rem;
         display: 'flex';
