--- a/src/app/modules/admin/ProfileScreen/changePasswordScreen.scss
+++ b/src/app/modules/admin/ProfileScreen/changePasswordScreen.scss
@@ -26,6 +26,28 @@
         justify-content: flex-start;
         align-items: flex-start;
 
+        .passwordInput {
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+            width: 97.7%;
+            border: 1px solid rgb(113, 111, 111);
+            border-radius: 5px;
+            input {
+                width: 93%;
+                border: none;
+                font-size: 1rem;
+                color: rgb(8, 7, 7);
+                &::placeholder {
+                    font-size: 1rem;
+                    opacity: 0.7;
+                }
+                &:focus {
+                    outline: none;
+                }
+            }
+        }
+
         input {
             font-size: 1rem;
             padding: 0rem 1rem;
@@ -34,6 +56,9 @@
             border: 1px solid;
             border-radius: 5px;
             color: rgb(167, 167, 167);
+            &:focus {
+                outline: none;
+            }
         }
 
         .submitForm {
