--- a/src/app/modules/admin/UserPages/Anganwadi/addAnganwadi.scss
+++ b/src/app/modules/admin/UserPages/Anganwadi/addAnganwadi.scss
@@ -5,6 +5,8 @@
     padding: 1.5rem 1.2rem;
     background-color: rgb(241, 241, 241);
     .AddAnganwadiBox{
+        overflow: auto;
+        max-height: 72.2vh;
         padding: 2.7rem 2.5rem 5rem;
         border-radius: 5px;
         background-color: #fff;
