--- a/src/app/modules/admin/queryManagement/queryManagement.scss
+++ b/src/app/modules/admin/queryManagement/queryManagement.scss
@@ -68,6 +68,9 @@
         padding: 3rem 1.1rem;
         .queryManagement-inner {
             .queryManagement-inner-1 {
+                h2{
+                    font-size: 1.2rem;
+                }
                 button {
                     width: 33%;
                     font-size: 0.8rem;
