--- a/src/app/modules/admin/Events/addEvent.scss
+++ b/src/app/modules/admin/Events/addEvent.scss
@@ -4,6 +4,7 @@
     width: 100%;
     padding: 1.5rem 1.2rem;
     background-color: rgb(241, 241, 241);
+    overflow: auto;
     .AddEventBox{
         padding: 2.7rem 2.5rem 5rem;
         border-radius: 5px;
