--- a/src/app/modules/admin/Events/showEventOccurence.scss
+++ b/src/app/modules/admin/Events/showEventOccurence.scss
@@ -1,12 +1,14 @@
 .Events-main {
     display: flex;
     padding: 3rem 3.7rem;
-    height: 100%;
+    min-height: 100%;
     width: 80vw;
     background-color: rgb(241, 241, 241);
+    overflow: auto;
     .Events-inner {
-        height: 100%;
+        min-height: 100%;
         width: 100%;
+        padding-bottom: 22rem;
         .Events-inner-1 {
             display: flex;
             justify-content: space-between;
@@ -16,8 +18,16 @@
                 color: green;
             }
         }
+        .carousel-container{
+            width: 100%;
+        }
         .table-container{
             margin: 2rem 0rem;
+            min-height: 18%;
+        }
+        .table-2{
+            margin: 3.5rem 0rem;
+            min-height: 42%;
         }
     }
 }
