--- a/src/app/modules/admin/queryManagement/addQuery.scss
+++ b/src/app/modules/admin/queryManagement/addQuery.scss
@@ -1,13 +1,10 @@
-.AddCDPO-Container {
+.AddQuery-Container {
     height: 100%;
     border-radius: 0.6rem;
     width: 100%;
     padding: 1.5rem 1.2rem;
     background-color: rgb(241, 241, 241);
-    .AddCDPOBox{
-        overflow: auto;
-        max-height: 72.2vh;
-
+    .AddQueryBox{
         padding: 2.7rem 2.5rem 5rem;
         border-radius: 5px;
         background-color: #fff;
@@ -20,11 +17,20 @@
         flex-direction: column;
         justify-content: flex-start;
         align-items: flex-start;
+        img{
+            height: 10rem;
+            width: 15rem;
+        }
         input{
             font-size: 1rem;
             padding: 0rem 1rem;
             height: 3rem;
             width: 95%;
+        }
+        .largeText{
+            height: 5rem;
+            width: 100%;
+            padding: 0rem 2remr;
         }
         .submitForm{
             width: 100%;
@@ -32,7 +38,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            margin-top: 2.5rem;
+            margin-top: 4rem;
             button{
                 height: 90%;
                 width: 8rem;
