--- a/src/app/modules/admin/Events/addEvent.scss
+++ b/src/app/modules/admin/Events/addEvent.scss
@@ -5,54 +5,72 @@
     padding: 1.5rem 1.2rem;
     background-color: rgb(241, 241, 241);
     overflow: auto;
-    .AddEventBox{
+
+    .AddEventBox {
         padding: 2.7rem 2.5rem 5rem;
         border-radius: 5px;
         background-color: #fff;
     }
+
     .Heading-Box {
         display: flex;
     }
-    .form-main {
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: flex-start;
-        input{
-            font-size: 1rem;
-            padding: 0rem 1rem;
-            height: 3rem;
-            width: 95%;
-        }
-        .submitForm{
-            width: 100%;
-            height: 3rem;
+
+    form {
+        .form-main {
             display: flex;
+            flex-direction: column;
             justify-content: center;
-            align-items: center;
-            margin-top: 4rem;
-            button{
-                height: 90%;
-                width: 8rem;
-                margin: 0rem 0.5rem;
-                border-radius: 10px;
-                font-size: 0.9rem;
-                border: none;
-                &:first-child{
-                    background-color: red;
-                    color: white;
-                }
-                &:last-child{
-                    background-color: green;
-                    color: aliceblue;
+            align-items: flex-start;
+            width: 100%;
+
+            select,
+            input,
+            option {
+                font-size: 1rem;
+                padding: 0rem 1rem;
+                height: 3rem;
+                width: 95%;
+            }
+
+            select,
+            option {
+                width: 97.5%;
+            }
+
+            .submitForm {
+                width: 100%;
+                height: 3rem;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                margin-top: 4rem;
+
+                button {
+                    height: 90%;
+                    width: 8rem;
+                    margin: 0rem 0.5rem;
+                    border-radius: 10px;
+                    font-size: 0.9rem;
+                    border: none;
+
+                    &:first-child {
+                        background-color: red;
+                        color: white;
+                    }
+
+                    &:last-child {
+                        background-color: green;
+                        color: aliceblue;
+                    }
                 }
             }
         }
     }
 }
 
-@media screen and (max-width: 1080px){
-    label{
+@media screen and (max-width: 1080px) {
+    label {
         font-size: 0.9rem;
     }
 }
