--- a/src/app/modules/admin/Events/events.scss
+++ b/src/app/modules/admin/Events/events.scss
@@ -59,6 +59,29 @@
                 }
             }
         }
+        .table-footer {
+            background-color: #fff;
+            margin-bottom: 2rem;
+            padding: 1rem;
+            width: 100%;
+            display: flex;
+            align-items: center;
+            select {
+                font-size: 0.9rem;
+                outline: none;
+                border: none;
+                background-color: transparent;
+                margin: 0rem 1rem;
+            }
+            .pagination{
+                display: flex;
+                margin-right: 2rem;
+                padding-left: 1rem;
+                p{
+                    cursor: pointer;
+                }
+            }
+        }
     }
 }
 
