--- a/src/app/modules/admin/UserPages/Anganwadi/anganwadiMain.scss
+++ b/src/app/modules/admin/UserPages/Anganwadi/anganwadiMain.scss
@@ -71,6 +71,37 @@
                 }
             }
         }
+        .table-footer {
+            background-color: #fff;
+            margin-bottom: 2rem;
+            padding: 1rem;
+            width: 100%;
+            display: flex;
+            align-items: center;
+            select {
+                font-size: 0.9rem;
+                outline: none;
+                border: none;
+                background-color: transparent;
+                margin: 0rem 1rem;
+            }
+            .pagination{
+                display: flex;
+                margin-right: 2rem;
+                padding-left: 1rem;
+                button {
+                    background-color: transparent;
+                    border: none;
+                    cursor: pointer;
+                    &:last-child:focus{
+                        opacity: 0.3;
+                    }
+                    &:first-child:focus{
+                        opacity: 0.3;
+                    }
+                }
+            }
+        }
     }
 }
 
@@ -112,4 +143,8 @@
         }
 
     }
+}
+
+.LowOpacity{
+    opacity: 0.4;
 }
