--- a/src/app/modules/admin/UserPages/CDPO/addCdpo.scss
+++ b/src/app/modules/admin/UserPages/CDPO/addCdpo.scss
@@ -20,11 +20,35 @@
         flex-direction: column;
         justify-content: flex-start;
         align-items: flex-start;
-        input{
+        .passwordInput {
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+            width: 97.7%;
+            border: 1px solid rgb(113, 111, 111);
+            border-radius: 5px;
+            input {
+                width: 93%;
+                border: none;
+                font-size: 1rem;
+                color: rgb(8, 7, 7);
+                &::placeholder {
+                    font-size: 1rem;
+                    opacity: 0.7;
+                }
+                &:focus {
+                    outline: none;
+                }
+            }
+        }
+        select, input, option, textarea{
             font-size: 1rem;
             padding: 0rem 1rem;
             height: 3rem;
             width: 95%;
+        }
+        select, option{
+            width: 97.5%;
         }
         .submitForm{
             width: 100%;
@@ -32,7 +56,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            margin-top: 2.5rem;
+            margin-top: 4rem;
             button{
                 height: 90%;
                 width: 8rem;
