--- a/src/app/modules/admin/UserPages/CDPO/cdpoMain.scss
+++ b/src/app/modules/admin/UserPages/CDPO/cdpoMain.scss
@@ -14,9 +14,11 @@
             justify-content: space-between;
             align-items: center;
             height: 5%;
-            h2{
+
+            h2 {
                 color: green;
             }
+
             .CDPO-ButtonBox {
                 height: 100%;
                 width: 28%;
@@ -32,7 +34,8 @@
                     border-radius: 8px;
                     font-size: 0.9rem;
                     font-weight: 800;
-                    .link{
+
+                    .link {
                         color: #fff;
                     }
                 }
@@ -73,6 +76,41 @@
                 }
             }
         }
+
+        .table-footer {
+            background-color: #fff;
+            margin-bottom: 2rem;
+            padding: 1rem;
+            width: 100%;
+            display: flex;
+            align-items: center;
+
+            select {
+                font-size: 0.9rem;
+                outline: none;
+                border: none;
+                background-color: transparent;
+                margin: 0rem 1rem;
+            }
+
+            .pagination {
+                display: flex;
+                margin-right: 2rem;
+                padding-left: 1rem;
+
+                button {
+                    background-color: transparent;
+                    border: none;
+                    cursor: pointer;
+                    &:last-child:focus{
+                        opacity: 0.3;
+                    }
+                    &:first-child:focus{
+                        opacity: 0.3;
+                    }
+                }
+            }
+        }
     }
 }
 
@@ -86,6 +124,7 @@
                 .CDPO-ButtonBox {
                     height: 100%;
                     width: 55%;
+
                     button {
                         width: 53%;
                         font-size: 0.7rem;
