--- a/src/app/modules/admin/UserPages/GeoTagAnganwadi/geoTagAnganwadiMain.scss
+++ b/src/app/modules/admin/UserPages/GeoTagAnganwadi/geoTagAnganwadiMain.scss
@@ -17,6 +17,7 @@
 
             h2 {
                 color: green;
+                font-size: 1.3rem;
             }
 
             button {
@@ -62,6 +63,33 @@
                     border: 1px solid rgb(148, 139, 139);
                     background-color: #fff;
                 }
+            }
+        }
+    }
+}
+
+.Modal{
+    .submitForm{
+        width: 100%;
+        height: 3rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 1rem;
+        button{
+            height: 90%;
+            width: 8rem;
+            margin: 0rem 0.5rem;
+            border-radius: 10px;
+            font-size: 0.9rem;
+            border: none;
+            &:first-child{
+                background-color: green;
+                color: white;
+            }
+            &:last-child{
+                background-color: red;
+                color: aliceblue;
             }
         }
     }
