--- a/src/app/modules/admin/Schemes/schemes.scss
+++ b/src/app/modules/admin/Schemes/schemes.scss
@@ -38,6 +38,7 @@
             display: flex;
             justify-content: flex-end;
             align-items: center;
+
             .search {
                 display: flex;
                 align-items: space-between;
@@ -61,6 +62,7 @@
                 }
             }
         }
+
         .table-footer {
             background-color: #fff;
             margin-bottom: 2rem;
@@ -68,6 +70,7 @@
             width: 100%;
             display: flex;
             align-items: center;
+
             select {
                 font-size: 0.9rem;
                 outline: none;
@@ -75,11 +78,15 @@
                 background-color: transparent;
                 margin: 0rem 1rem;
             }
-            .pagination{
+
+            .pagination {
                 display: flex;
                 margin-right: 2rem;
                 padding-left: 1rem;
-                p{
+
+                button {
+                    border: none;
+                    background-color: transparent;
                     cursor: pointer;
                 }
             }
@@ -91,6 +98,7 @@
     .Schemes-main {
         width: 100%;
         padding: 1rem;
+
         .Schemes-inner {
             .Schemes-inner-1 {
                 button {
@@ -102,16 +110,31 @@
             .Schemes-inner-2 {
                 height: 10%;
                 width: 100%;
+
                 .search {
                     width: 100%;
                     font-size: 0.7rem;
+
                     .search-input {
                         margin-right: 1rem;
                         font-size: 1rem;
                     }
+
                     .action {
                         font-size: 1rem;
                     }
+                }
+            }
+
+            .table-footer {
+                font-size: 0.75rem;
+
+                select {
+                    font-size: 0.8rem;
+                    outline: none;
+                    border: none;
+                    background-color: transparent;
+                    margin: 0rem 1rem;
                 }
             }
         }
