--- a/src/app/modules/admin/UserPages/Anganwadi/anganwadiMain.scss
+++ b/src/app/modules/admin/UserPages/Anganwadi/anganwadiMain.scss
@@ -34,7 +34,8 @@
                     border-radius: 8px;
                     font-size: 0.9rem;
                     font-weight: 800;
-                    .link{
+
+                    .link {
                         color: #fff;
                     }
                 }
@@ -71,6 +72,7 @@
                 }
             }
         }
+
         .table-footer {
             background-color: #fff;
             margin-bottom: 2rem;
@@ -78,6 +80,7 @@
             width: 100%;
             display: flex;
             align-items: center;
+
             select {
                 font-size: 0.9rem;
                 outline: none;
@@ -85,20 +88,16 @@
                 background-color: transparent;
                 margin: 0rem 1rem;
             }
-            .pagination{
+
+            .pagination {
                 display: flex;
                 margin-right: 2rem;
                 padding-left: 1rem;
+
                 button {
                     background-color: transparent;
                     border: none;
                     cursor: pointer;
-                    &:last-child:focus{
-                        opacity: 0.3;
-                    }
-                    &:first-child:focus{
-                        opacity: 0.3;
-                    }
                 }
             }
         }
@@ -115,6 +114,7 @@
                 .Anganwadi-ButtonBox {
                     height: 100%;
                     width: 55%;
+
                     button {
                         width: 53%;
                         font-size: 0.65rem;
@@ -140,11 +140,23 @@
                     }
                 }
             }
+
+            .table-footer {
+                font-size: 0.75rem;
+
+                select {
+                    font-size: 0.8rem;
+                    outline: none;
+                    border: none;
+                    background-color: transparent;
+                    margin: 0rem 1rem;
+                }
+            }
         }
 
     }
 }
 
-.LowOpacity{
+.LowOpacity {
     opacity: 0.4;
 }
