--- a/src/app/modules/admin/UserPages/HOD/hodMain.scss
+++ b/src/app/modules/admin/UserPages/HOD/hodMain.scss
@@ -21,8 +21,7 @@
                 height: 100%;
                 width: 28%;
                 display: flex;
-                justify-content: space-between;
-
+                justify-content: flex-end;
                 button {
                     height: 98%;
                     width: 48%;
@@ -73,6 +72,34 @@
                 }
             }
         }
+        .table-footer {
+            background-color: #fff;
+            margin-bottom: 2rem;
+            padding: 1rem;
+            width: 100%;
+            display: flex;
+            align-items: center;
+
+            select {
+                font-size: 0.9rem;
+                outline: none;
+                border: none;
+                background-color: transparent;
+                margin: 0rem 1rem;
+            }
+
+            .pagination {
+                display: flex;
+                margin-right: 2rem;
+                padding-left: 1rem;
+
+                button {
+                    background-color: transparent;
+                    border: none;
+                    cursor: pointer;
+                }
+            }
+        }
     }
 }
 
@@ -109,6 +136,17 @@
                     .action {
                         font-size: 1rem;
                     }
+                }
+            }
+            .table-footer {
+                font-size: 0.75rem;
+
+                select {
+                    font-size: 0.8rem;
+                    outline: none;
+                    border: none;
+                    background-color: transparent;
+                    margin: 0rem 1rem;
                 }
             }
         }
