--- a/src/app/modules/admin/UserPages/Anganwadi/anganwadiMain.scss
+++ b/src/app/modules/admin/UserPages/Anganwadi/anganwadiMain.scss
@@ -80,6 +80,7 @@
             width: 100%;
             display: flex;
             align-items: center;
+            margin-top: 0rem;
 
             select {
                 font-size: 0.9rem;
