--- a/src/app/modules/admin/Events/events.scss
+++ b/src/app/modules/admin/Events/events.scss
@@ -70,7 +70,7 @@
             width: 100%;
             display: flex;
             align-items: center;
-
+            margin-top: -2rem;
             select {
                 font-size: 0.9rem;
                 outline: none;
