--- a/src/app/modules/admin/UserPages/CDPO/cdpoMain.scss
+++ b/src/app/modules/admin/UserPages/CDPO/cdpoMain.scss
@@ -84,6 +84,7 @@
             width: 100%;
             display: flex;
             align-items: center;
+            margin-top: 0rem;
 
             select {
                 font-size: 0.9rem;
