--- a/src/app/modules/admin/UserPages/DPO/addDpo.scss
+++ b/src/app/modules/admin/UserPages/DPO/addDpo.scss
@@ -4,44 +4,85 @@
     width: 100%;
     padding: 1.5rem 1.2rem;
     background-color: rgb(241, 241, 241);
-    .AddDPOBox{
+
+    .AddDPOBox {
         padding: 2.7rem 2.5rem 5rem;
         border-radius: 5px;
         background-color: #fff;
     }
+
     .Heading-Box {
         display: flex;
     }
+
     .form-main {
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
         align-items: flex-start;
-        input{
+
+        .passwordInput {
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+            width: 97.7%;
+            border: 1px solid rgb(113, 111, 111);
+            border-radius: 5px;
+
+            input {
+                width: 93%;
+                border: none;
+                font-size: 1rem;
+                color: rgb(8, 7, 7);
+
+                &::placeholder {
+                    font-size: 1rem;
+                    opacity: 0.7;
+                }
+
+                &:focus {
+                    outline: none;
+                }
+            }
+        }
+
+        select,
+        input,
+        option,
+        textarea {
             font-size: 1rem;
             padding: 0rem 1rem;
             height: 3rem;
             width: 95%;
         }
-        .submitForm{
+
+        select,
+        option {
+            width: 97.5%;
+        }
+
+        .submitForm {
             width: 100%;
             height: 3rem;
             display: flex;
             justify-content: center;
             align-items: center;
             margin-top: 4rem;
-            button{
+
+            button {
                 height: 90%;
                 width: 8rem;
                 margin: 0rem 0.5rem;
                 border-radius: 10px;
                 font-size: 0.9rem;
                 border: none;
-                &:first-child{
+
+                &:first-child {
                     background-color: red;
                     color: white;
                 }
-                &:last-child{
+
+                &:last-child {
                     background-color: green;
                     color: aliceblue;
                 }
@@ -50,8 +91,8 @@
     }
 }
 
-@media screen and (max-width: 1080px){
-    label{
+@media screen and (max-width: 1080px) {
+    label {
         font-size: 0.9rem;
     }
 }
