--- a/src/app/modules/admin/UserPages/DPO/dpoMain.scss
+++ b/src/app/modules/admin/UserPages/DPO/dpoMain.scss
@@ -14,9 +14,11 @@
             justify-content: space-between;
             align-items: center;
             height: 5%;
-            h2{
+
+            h2 {
                 color: green;
             }
+
             .DPO-ButtonBox {
                 height: 100%;
                 width: 28%;
@@ -32,7 +34,8 @@
                     border-radius: 8px;
                     font-size: 0.9rem;
                     font-weight: 800;
-                    .link{
+
+                    .link {
                         color: #fff;
                     }
                 }
@@ -73,6 +76,35 @@
                 }
             }
         }
+        .table-footer {
+            background-color: #fff;
+            margin-bottom: 2rem;
+            padding: 1rem;
+            width: 100%;
+            display: flex;
+            align-items: center;
+            margin-top: 0rem;
+
+            select {
+                font-size: 0.9rem;
+                outline: none;
+                border: none;
+                background-color: transparent;
+                margin: 0rem 1rem;
+            }
+
+            .pagination {
+                display: flex;
+                margin-right: 2rem;
+                padding-left: 1rem;
+
+                button {
+                    background-color: transparent;
+                    border: none;
+                    cursor: pointer;
+                }
+            }
+        }
     }
 }
 
@@ -86,6 +118,7 @@
                 .DPO-ButtonBox {
                     height: 100%;
                     width: 55%;
+
                     button {
                         width: 53%;
                         font-size: 0.7rem;
@@ -109,6 +142,18 @@
                     .action {
                         font-size: 1rem;
                     }
+                }
+            }
+
+            .table-footer {
+                font-size: 0.75rem;
+
+                select {
+                    font-size: 0.8rem;
+                    outline: none;
+                    border: none;
+                    background-color: transparent;
+                    margin: 0rem 1rem;
                 }
             }
         }
