--- a/src/app/modules/admin/UserPages/GeoTagAnganwadi/geoTagAnganwadiMain.scss
+++ b/src/app/modules/admin/UserPages/GeoTagAnganwadi/geoTagAnganwadiMain.scss
@@ -72,6 +72,7 @@
             width: 100%;
             display: flex;
             align-items: center;
+            margin-top: 0rem;
 
             select {
                 font-size: 0.9rem;
