--- a/src/app/modules/admin/UserPages/HOD/hodMain.scss
+++ b/src/app/modules/admin/UserPages/HOD/hodMain.scss
@@ -14,6 +14,7 @@
             justify-content: space-between;
             align-items: center;
             height: 5%;
+            
             h2{
                 color: green;
             }
@@ -79,6 +80,7 @@
             width: 100%;
             display: flex;
             align-items: center;
+            margin-top: 0rem;
 
             select {
                 font-size: 0.9rem;
